Fixes Live-Collection scroll on Tablet
SRFCMSAL-2751

--- a/source/_patterns/20-molecules/onairnav/onairnav.scss
+++ b/source/_patterns/20-molecules/onairnav/onairnav.scss
@@ -50,7 +50,7 @@
   margin: 0;
   padding: 0 8px;
 
-  @include smartphone {
+  @include desktop-down {
     overflow-x: scroll;
     overflow-y: hidden;
     @include preventScrollbars;
